--- a/gb/23/3/13/n13949668.md
+++ b/gb/23/3/13/n13949668.md
@@ -27,6 +27,7 @@
 <p>习近平掌权后，国家目标已从经济发展转向共产党意识形态的安全，在试图赢得与自由世界的一场竞争中，科技政策又回到了1949年的原点，科技成为“事业”单位，重点服务于全球的政治和军事目标。</p>
 <p>在不久前中共人代会提出的机构改革中，习当局重建了与毛时代类似中央科技委员会，加强共产党对科技的直接领导。</p>
 <p>旅美经济学者郑旭光对大纪元表示，“中央科技委员会是党中央要设立的机构，就是要全国统筹、搞举国体制、举国科研，类似于毛泽东时期搞两弹一星的状态，要重点攻关一些领域技术难题。”</p>
+<p>针对中共发展科技的目的，林宗男认为有两个原因：“第一，要维护中共这样一个专制集权的统治架构。第二，这样的一个专制集权统治架构，当它（科技上）获得一定效果的时候，这样一个架构就具有侵略性，就如同俄罗斯去侵略乌克兰一样。”</p>
 <p>早在2014年上任之初，习近平就表达了这样的想法：“只有把核心技术掌握在自己手中，才能真正掌握竞争和发展的主动权”。这些核心技术又被称为“硬科技”，包括人工智能、航空航天、生物技术、光电芯片、新一代信息技术、新材料、新能源、智能制造等等。</p>
 <p>习近平在中共人代会一次闭门会议上发表讲话时说，科技领域的自力更生和实力，是推进“高质量发展”的途径。面对激烈的国际竞争，他呼吁支持“原创性和开拓性研究”。</p>
 <p>反映在中共“两会”出席人名单上，作为服务于民生消费端的腾讯创办人马化腾、百度创办人李彦宏等互联网巨头，从名单中消失，取而代之的是芯片等科技硬件行业的研究人员和工程师，包括中芯国际工程师郭会琴，华虹半导体公司董事长张素心等，他们服务于习当局的战略目标。</p>
@@ -43,7 +44,7 @@
 <p>台湾大学政治学系名誉教授明居正对大纪元表示，“中国大陆的高科技的出口，基本上靠外商外资，十家里面大概差不多七家以上是外资，那七家里面大概四家是台资和台商。外商外资一方面就进口大量的晶片跟零组件等等进到大陆去，然后中国再加工拼装把它卖出去，就赚一点点加工的钱。”</p>
 <p>对于中共当局的举国体制能否成功，明居正表示，“我想最大的问题就是，第一，它们（中共）原来对基础科研这块不是太重视，偷了很多东西，觉得是很方便，所以没有再下力气。”</p>
 <p>“第二，它们一直有一种超速的概念，举国体制当然有其优点，但超速不是那么容易，超速是日积月累的功夫。台积电创始人张忠谋自己讲得很清楚，他说我们是累积了三四十年的功夫才走到今天，别人也追上来，连美国都没有办法这么快弄出来，中国（中共）能弄出来？不太可能，这就是体制问题。”</p>
-<p>明居正说，“举国体制能不能突破？我只能说会有一点效果，但是绝对达不到突破的地步，我相信它们（中共）自己心里有数。更可怕的就是有些大陆商人，或者说一些特权分子，看见有机可乘的时候，就成立什么公司，结果最后他去贪污去了，这种事情已经非常多了。”</p>
+<p>明居正说，“举国体制能不能突破？我只能说会有一点效果，但是绝对达不到突破的地步，我相信它们（中共）自己心里有数。更可怕的就是有些大陆商人，或者说一些特权分子，看见有机可乘的时候，就成立什么公司，结果最后他去贪污去了，这种事情已经非常多了。”◇</p>
 <p>责任编辑：林妍#</p>
 	
 <hr>
@@ -52,37 +53,37 @@
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/9/n13946831.md#1">美中芯片战扩至欧洲 荷兰加入 中共跳脚</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948479.md#1">中共依赖军工系造芯 或加速科技新冷战</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949655.md#1">江泽民旧同僚之子东风汽车董座竺延风被提前退休</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13949759.md#1">【翻墙必看】军队上将和党媒高管同日死亡</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964333.md#1">【中国禁闻】中国地方银行现危机 多行拒赎二级债</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964335.md#1">【全球新闻】马英九称两岸都是中华民国 遭中共封杀</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/27/n9996650.md#1" target="_blank">揭秘“四一二反革命政变”的历史真相（上）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/30/n11355603.md#1" target="_blank">法轮功阿根廷洪传19年 法官曾要抓江罗</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/16/n11262822.md#1" target="_blank">【征文】兰音：传统社会中妻子的真实地位</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/5/15/n3871061.md#1" target="_blank">唐恩：推崇真善忍　褒奖显人心</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945330.md#1">【未解之谜】罕见天象昭示红朝命数？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13944080.md#1">一代圣主康熙皇帝至孝之至 数十年如一日</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945916.md#1">电视人患忧郁症陷绝境 因一本奇书改变命运</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/11/n13947696.md#1">【未解之谜】邮票上的预言</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/5/n13943724.md#1">妙不可言的舞剧《草船借箭》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949693.md#1">【新唐人大视野】美英澳水下合作 直刺北京软肋</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949714.md#1">【秦鹏观察】硅谷银行获兜底 谁应为倒闭负责？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949307.md#1">【中国禁闻】中共新一届政府班子出炉 民众看衰</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948537.md#1">人大常委得票6人垫底 1人反对弃权票近2千</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947527.md#1">习近平“1号训令”变低调 学者析背后诡计</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948474.md#1">袁红冰：两会展现谎言 中共面临惊涛骇浪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13948868.md#1">范冰冰现身奥斯卡红毯 获赞“一出场就赢了”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948769.md#1">梁朝伟亚洲电影大奖封帝 刘嘉玲打开名单惊呆</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947592.md#1">消失7个月 26岁男星蒋智豪确诊肺癌晚期</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948798.md#1">“什么戏都想演” 洪金宝叹演动作片难糊口</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13948969.md#1">奥斯卡获奖名单揭晓 杨紫琼成首位亚裔影后</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945412.md#1">组图：最安全的十款SUV 碰撞测试评级最高</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949469.md#1">2月份美国房市 拐点出现！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/9/n13946765.md#1">一房二用 10种隐形床打造复合空间</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948420.md#1">退休的最大挑战是什么？哈佛85年研究释疑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/16/n13931077.md#1">典型毒亲事例之二：过分对孩子强调责任心</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948717.md#1">汉宫的明珠——王昭君</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963438.md#1">【时事人物】从任性少年到ChatGPT新乌托邦教主</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962992.md#1">【车评】橙黄之色 2023 Toyota Tacoma TRD Pro</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963361.md#1">【时事金扫描】川普被起诉牵涉大 解读混乱局势</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963229.md#1">大陆直播主街头采访“你会上前线吗”舆论翻车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962292.md#1">海南变香港？专家：党比法大 难造自由港</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962933.md#1">分析：养儿防老被中共破坏 老人何去何从</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962773.md#1">分享冻龄秘笈遭酸民攻击 伊能静高EQ回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962350.md#1">孙艺真与玄彬结婚一周年 IG发照片庆祝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963429.md#1">9岁时曾遭绑架 张艾嘉儿子首次吐露心声</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962591.md#1">常服安眠药痴呆风险增8成  专家荐“神奇助眠剂”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962594.md#1">这几种食物加辣酱 味道超乎想像</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/3/13/n13949668.htm">中共两会重点部署科技战 美中竞争白热化</a></p><hr>
